[gd_scene load_steps=7 format=2]

[ext_resource path="res://img/screens/register.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/screens/login_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/screens/register.gd" type="Script" id=3]
[ext_resource path="res://img/brands/logo_branco.png" type="Texture" id=4]
[ext_resource path="res://fonts/arial/ARIAL.TTF" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 6
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
rect_pivot_offset = Vector2( -178.989, 28.1469 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -3.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = 136.0
margin_bottom = -124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelName" type="Label" parent="NinePatchRect/VBoxContainer"]
anchor_top = 0.0227273
anchor_bottom = 0.0227273
margin_right = 132.0
margin_bottom = 13.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.0980392, 0.580392, 0.803922, 1 )
text = "Nome do personagem"

[node name="Name" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
margin_top = 17.0
margin_right = 132.0
margin_bottom = 40.0
theme = ExtResource( 2 )
max_length = 50

[node name="LabelEmail" type="Label" parent="NinePatchRect/VBoxContainer"]
anchor_top = 0.0227273
anchor_bottom = 0.0227273
margin_top = 44.0
margin_right = 132.0
margin_bottom = 57.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.0980392, 0.580392, 0.803922, 1 )
text = "E-mail"

[node name="Email" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
margin_top = 61.0
margin_right = 132.0
margin_bottom = 84.0
theme = ExtResource( 2 )
max_length = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Senha" type="Label" parent="NinePatchRect/VBoxContainer"]
anchor_top = 0.0227273
anchor_bottom = 0.0227273
margin_top = 88.0
margin_right = 132.0
margin_bottom = 101.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.0980392, 0.580392, 0.803922, 1 )
text = "Senha"

[node name="Password" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
margin_top = 105.0
margin_right = 132.0
margin_bottom = 128.0
theme = ExtResource( 2 )
max_length = 50
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 132.0
margin_right = 132.0
margin_bottom = 152.0
rect_min_size = Vector2( 80, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextButton" type="Label" parent="NinePatchRect/VBoxContainer/LoginButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.12373
margin_top = -0.749161
margin_right = -1.12373
margin_bottom = -0.749161
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.0980392, 0.580392, 0.803922, 1 )
text = "Cadastrar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="toLoginButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 156.0
margin_right = 132.0
margin_bottom = 176.0
rect_min_size = Vector2( 80, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextButton" type="Label" parent="NinePatchRect/VBoxContainer/toLoginButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.770169
margin_top = -7.46666
margin_right = -0.770172
margin_bottom = -7.46666
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.0980392, 0.580392, 0.803922, 1 )
text = "Login"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PHA 01" type="Sprite" parent="."]
position = Vector2( 346.938, 219.714 )
scale = Vector2( 0.0738967, 0.0680888 )
texture = ExtResource( 4 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="MessageDanger" type="Control" parent="."]
visible = false
margin_left = 5.3454
margin_top = 145.216
margin_right = 45.3454
margin_bottom = 185.216
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Danger" type="Label" parent="MessageDanger"]
margin_right = 180.0
margin_bottom = 41.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.278431, 0.278431, 1 )
custom_fonts/font = SubResource( 1 )
text = "Erros encontrados, verifique os dados de entrada e tente novamente. 
1. Insira um email v√°lido.
2. Senha deve ser maior ou igual a 6 digitos.
3. Nome deve sei igual ou maior que 4 digitos."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="NinePatchRect/VBoxContainer/Name" to="." method="_on_Name_text_changed"]
[connection signal="text_changed" from="NinePatchRect/VBoxContainer/Email" to="." method="_on_Email_text_changed"]
[connection signal="text_changed" from="NinePatchRect/VBoxContainer/Password" to="." method="_on_Password_text_changed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/toLoginButton" to="." method="_on_toLoginButton_pressed"]
